# statistics

./: Cargo.toml
datasets/: James_Joyce_Ramble_10kMasters.csv
src/: dct.rs  lib.rs  main.rs
src/data_code/: babyboom.rs  fem_preg.rs  mod.rs  runners.rs
src/graphing/: cdf.rs  graph.rs  mod.rs  pmf.rs
src/plot/: cdf.rs  mod.rs  plot.rs  plot_many.rs
src/stats/: cdf.rs  mod.rs  pmf.rs
src/stats/analytic/: exponential.rs  gaussian.rs  mod.rs
src/stats/graphing/: distribution.rs  pmf.rs
src/stats_plots/: mod.rs  plot.rs
