[package]
name = "statistics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.6.0"
polars = { git = "https://github.com/pola-rs/polars", features = ["lazy"]}
plotters = "0.3.4"
rand = "0.8.5"